# geoviz

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: demo.geojson  here.wkt  here2.wkt
src/geoviz/: cli.py
